//Here I will maintain documentation on version history so that you may read about new features and/or changes.
Developed by Spencer Douglas for use by Stephen Gould Indianapolis
BETA 3.5
	-old event/file cleanup optimization: old events will be removed much more quickly and should not slow down your browser
BETA 3.4
	-OPTIMIZATION, AT LONG LAST: Only the events which are visible in the current view are loaded. Greatly improved loadtimes, and 
	the laggy site should forever be a thing of the past.
/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
BETA 3.3
	-Added a second kind of alert: notes, which do not require resolution, but still appear at the top of an trucks's information page
	-All alerts can now be deleted
	-Temporarily disabled a function which was causing intermittent freezes and freezing when page is running in background
/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
BETA 3.2
	- Issue Reporting and emailing
/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
BETA 3.1
	- Changed the way event marking for cleanup/coloration works
	- UI changes and beautification
/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////

BETA 3.0.1
	- Added creator back for logs
/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
BETA 3.0
	- Events older than 2 weeks will be cleaned up the first, third, and (if applicable) fifth Friday of every month. 
/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
BETA 2.9.1
	- Loading cues for all action buttons