@@ -1,3 +1,15 @@
+
+ /* Hide scrollbar for Chrome, Safari and Opera */
+html::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+html {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+} 
+
 body {
 	font-family: Post Grotesk,Helvetica,Arial,sans-serif;
 	word-break: break-word !important;
